@@ -1,3 +1,7 @@
+SimpleComplex/Config 1.x, 2018-04-07
+------------------------------------
+- CLI config-set option 'array' (-r) to set 'json' (object) value as array.
+
 SimpleComplex/Config 1.x, 2018-03-26
 ------------------------------------
 - Sectioned config interface now extends the Utils package's general use
